--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -1,17 +1,19 @@
 [SERVICE]
     Flush        1
-    Log_Level    info
+    Log_Level    debug
+
 
 [INPUT]
     Name              tail
     Path              /logs/application.log
-    Read_from_Head    true
     Tag               application.log
+    Read_from_Head    True
 
 [OUTPUT]
-    Name              opensearch
-    Match             *
-    Host              opensearch
-    Port              9200
-    Index             application-logs
-    Suppress_Type_Name On
+    Name                  opensearch
+    Match                 application.log
+    Host                  opensearch
+    Port                  9200
+    Index                 application-logs
+    Suppress_Type_Name    On
+    Retry_Limit           False
